--- a/hello.html
+++ b/hello.html
@@ -20,7 +20,7 @@
 		<!-- description -->
 		<div>
 			<h1> Ma description </h1>
-			<p> Bonjour, je m’appelle Arnaud et je suis votre instructeur pour cette formation Git. </p>
+			<p> Bonjour, je m’appelle Ibrahima Oumar LY et je suis votre élève pour cette formation Git. </p>
 		</div>
 		
 		<!-- reconpense -->
